# llama.cpp

./: CMakeLists.txt
.github/workflows/: build-ci.yml  build.yml
common/: CMakeLists.txt
examples/: CMakeLists.txt
examples/server/tests/: requirements.txt
ggml/: CMakeLists.txt
ggml/src/: CMakeLists.txt
ggml/src/vulkan-shaders/: CMakeLists.txt
pocs/: CMakeLists.txt
pocs/vdot/: CMakeLists.txt
scripts/: sync-ggml.last
src/: CMakeLists.txt
tests/: CMakeLists.txt
